# clean-agents-template

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  (+1 more)
{{cookiecutter.project_slug}}/: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  deploy.yml
{{cookiecutter.project_slug}}/configs/: base.yaml  development.yaml  production.yaml  staging.yaml
{{cookiecutter.project_slug}}/docs/: architecture.md  prompts_guide.md
{{cookiecutter.project_slug}}/docs/runbooks/: incident_response.md
{{cookiecutter.project_slug}}/scripts/: evaluate_agent.py  ingest_documents.py  setup_data.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  config.py  paths.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/application/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/application/agents/: __init__.py  agent_utils.py  example_agent.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/application/services/: __init__.py  example_service.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/application/workflows/: __init__.py  example_workflow.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/domain/: __init__.py  exceptions.py  interfaces.py  models.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/domain/prompts/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/infrastructure/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/infrastructure/api/: __init__.py  dependencies.py  main.py  schemas.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/infrastructure/data/: __init__.py  data_source.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/infrastructure/llm/: __init__.py  llm_provider.py
{{cookiecutter.project_slug}}/tests/: conftest.py
{{cookiecutter.project_slug}}/tests/integration/: test_api.py  test_retrieval.py
{{cookiecutter.project_slug}}/tests/unit/application/: test_agent_utils.py
{{cookiecutter.project_slug}}/tests/unit/domain/: test_models.py  test_prompts.py
(+13 files in other folders)
