[project]
name = "clean-agents-template"
version = "0.1.0"
description = "Cookiecutter template for building AI agents with Clean Architecture"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "cookiecutter>=2.6",
    "pre-commit>=3.7",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["hooks"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]
